# tex2pdf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
input/: latex_literature_review.tex  latex_literature_review_references.bib
src/tex2pdf/: __init__.py  analysis.py  cli.py  core.py  models.py
tests/: __init__.py  test_analysis.py  test_cli_integration.py  test_core.py
